--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     background-color: #659dbd;
 }
+
 html{
     scroll-behavior: smooth;
 }
@@ -21,13 +22,21 @@ a,
     transition:all 300ms ease;
 }
 
-nav,
-.nav-links {
-  display: flex;
+nav, 
+.nav-links{
+    display: flex;
 }
 
 nav {
-  justify-content: space-around;
-  align-items: center;
-  height: 17vh;
+    display: flex;
+    justify-content: flex-end; /* Align items to the upper right */
+    align-items: center;
+    height: 17vh;
+}
+
+.nav-links {
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
+    margin-left: auto; /* Push the navigation links to the right */
 }
