--- a/style.css
+++ b/style.css
@@ -65,20 +65,28 @@ a:hover{
     transform: scale(1.1);
 }
 
-#hamburger-nav{
+#hamburger-nav {
     display: none;
-}
-
-.hamburger-menu{
+  }
+  
+  .hamburger-menu {
     position: relative;
     display: inline-block;
-}
-
-.hamburger.icon{
+  }
+  
+  .hamburger-icon {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 24px;
     width: 30px;
     cursor: pointer;
-}
+  }
+  
+  .hamburger-icon span {
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    transition: all 0.3 ease-in-out;
+  }
+  
