--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
-    background-color: #659dbd;
+    background-color: black;
 }
 
 html{
     scroll-behavior: smooth;
 }
 p {
-    color: white
+    color: #f5f5f5
 }
 
 a, 
@@ -41,7 +41,7 @@ nav {
     
 }
 .logo-text{
-    color:white;
+    color: #f5f5f5;
 }
 a{
     color: white;
@@ -57,7 +57,7 @@ a:hover{
 }
 
 .logo{
-    font-size: 1.95rem;
+    font-size: 2.5rem;
 }
 
 .logo:hover{
@@ -94,7 +94,7 @@ a:hover{
     position: absolute;
     top: 100%;
     right: 0;
-    background-color:#659dbd;
+    background-color:black;
     width: fit-content;
     max-height: 0;
     overflow: hidden;
@@ -194,7 +194,7 @@ section {
   }
   
   .section__text__p2 {
-    font-size: 1.5rem; 
+    font-size: 1.25rem; 
     margin-bottom: 2rem; 
   }
   
@@ -213,4 +213,8 @@ section {
   #socials-container a:hover {
     transform: scale(1.2); 
     transition: transform 0.2s ease-in-out; 
+  }
+
+  .title{
+   color: RED;
   }
