--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ section {
   .section__pic-container img {
    width: 100%; /* Make the image fill the container */
     height: 100%;
-    transition: transform 0.5 ease; 
+    transition: transform 0.50 ease; 
   }
   .section__pic-container:hover{
     transform: scale(1.2); 
@@ -206,18 +206,24 @@ section {
     margin-bottom: 1rem; 
   }
   
-  #socials-container {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
-  }
-  
-  #socials-container a:hover {
-    transform: scale(1.2); 
-    transition: transform 0.2s ease-in-out; 
-  }
-
   .title{
    color: #BE263D;
   }
+
+  #socials-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    
+}
+
+/* Icon */
+
+.icon {
+  cursor: pointer;
+  height: 4rem;
+}
+.icon:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out; /* Add a smooth transition effect */
+}
