--- a/style.css
+++ b/style.css
@@ -221,9 +221,9 @@ section {
 
 .icon {
   cursor: pointer;
-  height: 4rem;
+  height: 3rem;
 }
 .icon:hover {
   transform: scale(1.1);
-  transition: transform 0.3s ease-in-out; /* Add a smooth transition effect */
+  transition: transform 0.3s ease-in-out; 
 }
