--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ section {
   }
   
   .section__pic-container img {
-   width: 100%; /* Make the image fill the container */
+   width: 100%; 
     height: 100%;
     transition: transform 0.50 ease; 
   }
@@ -221,9 +221,58 @@ section {
 
 .icon {
   cursor: pointer;
-  height: 3rem;
+  height: 2rem;
 }
 .icon:hover {
   transform: scale(1.1);
   transition: transform 0.3s ease-in-out; 
+}
+/* Button */
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
+}
+
+.btn-color-1,
+.btn-color-2 {
+  border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+
+.btn-color-1,
+.btn-color-2:hover {
+  background: rgb(53, 53, 53);
+  color: white;
+}
+
+.btn-color-1:hover {
+  background: rgb(2, 2, 2);
+}
+
+.btn-color-2 {
+  background: black;
+  color: white;
+}
+
+
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-container {
+  gap: 1rem;
 }
