--- a/style.css
+++ b/style.css
@@ -166,24 +166,24 @@ section {
     align-items: center; 
     gap: 2rem; 
   }
-  
+ 
   .section__pic-container {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    width: 200px; 
-    height: 200px;
+    width: 150px; 
+    height: 150px;
     border-radius: 50%; 
     overflow: hidden; 
   }
-  
+
   .section__pic-container img {
    width: 100%; 
     height: 100%;
     transition: transform 0.50 ease; 
   }
   .section__pic-container:hover{
-    transform: scale(2.0); 
+    transform: scale(1.2); 
     cursor: pointer;
   }
   .section__text {
@@ -276,3 +276,62 @@ section {
 .btn-container {
   gap: 1rem;
 }
+
+#about {
+  position: relative;
+}
+
+.about-container {
+  gap: 2rem;
+  margin-bottom: 2rem;
+  margin-top: column;
+}
+
+.about-details-container {
+  justify-content: center;
+  flex-direction: column;
+}
+
+.about-container,
+.about-details-container {
+  display: flex;
+}
+
+.about-pic {
+  border-radius: 2rem;
+}
+
+.details-container {
+  padding: 1.5rem;
+  flex: 1;
+  background: black;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+}
+
+.section-container {
+  gap: 4rem;
+  height: 80%;
+}
+
+.section__pic-container {
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+.section__pic-container_2 {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.section__pic-container_2 img {
+  width: 100%; 
+   height: 100%;
+   transition: transform 0.50 ease; 
+ }
