--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ section {
   background: black;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border-color: #BE263D;
   text-align: center;
 }
 
@@ -321,17 +321,5 @@ section {
   width: 400px;
   margin: auto 0;
 }
-.section__pic-container_2 {
-  display: flex;
-  justify-content: center; 
-  align-items: center; 
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  overflow: hidden;
-}
-.section__pic-container_2 img {
-  width: 100%; 
-   height: 100%;
-   transition: transform 0.50 ease; 
- }
+
+
