--- a/style.css
+++ b/style.css
@@ -166,7 +166,12 @@ section {
     align-items: center; 
     gap: 2rem; 
   }
- 
+  .section__pic-container_about{
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    overflow: hidden;
+  }
 
   .section__pic-container {
     display: flex;
@@ -280,10 +285,6 @@ section {
 
 #about {
   position: relative;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
 }
 
 .about-container {
@@ -303,7 +304,9 @@ section {
 }
 
 .about-pic {
-  border-radius: 2rem;
+  border-radius: 50%;
+  height: 450px;
+  width: 450px;
 }
 
 .details-container {
@@ -317,7 +320,7 @@ section {
 }
 
 .section-container {
-  gap: 4rem;
+  gap: 2rem;
   height: 80%;
 }
 
@@ -325,16 +328,13 @@ section {
   height: 400px;
   width: 400px;
 }
-.section_pic-container_about{
-  height: 400px;
-  width: 400px;
-}
+
 .text-container{
   display: flex;
     justify-content: center;
-    margin-top: 1rem; 
+    margin-top: 1rem;
 }
 
 h3{
-  color: #f5f5f5
+  color: #BE263D;
 }
