--- a/style.css
+++ b/style.css
@@ -345,7 +345,6 @@ h2{
 }
 
 .arrow {
-  position: absolute;
   right: -5rem;
   bottom: 2.5rem;
 }
@@ -446,7 +445,7 @@ article .icon {
   justify-content: center;
   border-radius: 2rem;
   border: rgb(163, 163, 163) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border-color: #BE263D;
   background: (250, 250, 250);
   margin: 2rem;
   padding: 0.5rem;
