--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@ section {
   display: flex;
     justify-content: center;
     margin-top: 1rem;
+    padding-bottom: 2rem;
 }
 
 h3{
@@ -406,7 +407,7 @@ article .icon {
 #projects {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between; /* Adjust as needed */
+  justify-content: space-between; 
   align-items: stretch;
 }
 
