--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -53,16 +53,18 @@
 }
 
 @media screen and (max-width: 600px) {
-  #contact,
-  footer {
+  #contact, footer {
     height: 40vh;
   }
 
   #profile {
-    height: 83vh;
+    height: auto;
     margin-bottom: 0;
   }
-
+  #about{
+    text-align: center;
+    display: flex;
+  }
   article {
     font-size: 1rem;
   }
@@ -72,23 +74,30 @@
     margin-bottom: 2rem;
   }
 
-  .about-containers,
-  .contact-info-upper-container,
-  .btn-container {
-    flex-wrap: wrap;
+  .about-containers {
+    text-align: center;
+    margin: 1rem; 
+    padding: 1rem;
   }
 
-  .contact-info-container {
-    margin: 0;
+  .about-pic {
+    max-width: 100%;
   }
 
-  .contact-info-container p,
-  .nav-links li a {
-    font-size: 1rem;
+  .text-container {
+    text-align: center;
+  }
+
+  .experience-details-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
   }
 
   .experience-sub-title {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 
   .logo {
@@ -113,9 +122,91 @@
 
   .text-container {
     text-align: justify;
+    text-align: center;
   }
 
   .section__text_p2 {
     font-size: 1.25rem;
   }
+
+
+}
+@media screen and (max-width: 390px) {
+  #contact, footer {
+    height: 40vh;
+  }
+
+  #profile {
+    height: auto;
+    margin-bottom: 0;
+  }
+  #about{
+    text-align: center;
+    display: flex;
+  }
+  article {
+    font-size: 1rem;
+  }
+
+  footer nav {
+    height: fit-content;
+    margin-bottom: 2rem;
+  }
+
+  .about-containers {
+    text-align: center;
+    margin: 1rem; 
+    padding: 1rem;
+  }
+
+  .about-pic {
+    max-width: 100%;
+  }
+
+  .text-container {
+    text-align: center;
+  }
+
+  .experience-details-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+  }
+
+  .experience-sub-title {
+    font-size: 1rem;
+  }
+
+  .logo {
+    font-size: 1.5rem;
+  }
+
+  .nav-links {
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+  }
+
+  .section__pic-container {
+    width: auto;
+    height: 46vw;
+    justify-content: center;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+
+  .text-container {
+    text-align: justify;
+    text-align: center;
+  }
+
+  .section__text_p2 {
+    font-size: 1.25rem;
+  }
+
+
 }
